1 github pages 支持 2 对话框风格 3 固件下载改成二进制数组后的状态bug 4 翻译

--- a/app/src/ValuePicker/style.module.css
+++ b/app/src/ValuePicker/style.module.css
@@ -12,6 +12,10 @@
 	font-weight: bold;
 	border-bottom: dotted 1px;
 	text-align: center;
+	background-color:  rgba(60, 179, 113, 0.3) ;
+	border-top-right-radius: 14px;
+	height: 30px;
+	align-content: center;
 }
 .dialog input {
 	display: block;
@@ -85,6 +89,7 @@ ul.results::-webkit-scrollbar-thumb:hover {
   font-size: 10px;
   border-top: dotted 1px;
   padding-left: 13px;
+  text-align: right;
 }
 
 .choices-counter a {
